Added login feature

--- a/mojoUtilities/notes/templates/notes/base.html
+++ b/mojoUtilities/notes/templates/notes/base.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">About</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">User :</a>
+              <a class="nav-link" href="#">User : {{ user_name }}</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Logout</a>
