--- a/mojoUtilities/notes/templates/notes/index.html
+++ b/mojoUtilities/notes/templates/notes/index.html
@@ -1,6 +1,19 @@
-{% extends "notes/base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Login</title>
+</head>
+<body>
+	<h2>Welcome to Notes Entry</h2>
 
+	<br>
 
-{% block body %}
-	Welcome to notes
-{% endblock body %}
+	<form action="/login/" method="post">
+		Username : <input type="text" name="user_name" required>
+		<br>
+		Password : <input type="password" name="user_password" required>
+		<br>
+		<input type="submit" value="Submit">
+	</form>
+</body>
+</html>
