Login feature working

--- a/mojoUtilities/notes/templates/notes/user_dashboard.html
+++ b/mojoUtilities/notes/templates/notes/user_dashboard.html
@@ -1,8 +1,11 @@
 {% extends 'notes/base.html' %}
 
 {% block title %}
-
+	Welcome
 {% endblock title %}
+
+
+{% block user %}{{ user_name }}{% endblock user %}
 
 
 {% block body %}	
