--- a/mojoUtilities/notes/templates/notes/login.html
+++ b/mojoUtilities/notes/templates/notes/login.html
@@ -8,7 +8,8 @@
 
 	<br>
 
-	<form action="/login/" method="post">
+	<form action="login/" method="post">
+		{% csrf_token %}
 		Username : <input type="text" name="user_name" required>
 		<br>
 		Password : <input type="password" name="user_password" required>
