--- a/mojoUtilities/notes/templates/notes/login.html
+++ b/mojoUtilities/notes/templates/notes/login.html
@@ -8,7 +8,7 @@
 
 	<br>
 
-	<form action="login/" method="post">
+	<form action="{% url 'notes:login' %}" method="post">
 		{% csrf_token %}
 		Username : <input type="text" name="user_name" required>
 		<br>
