--- a/mojoUtilities/notes/templates/notes/base.html
+++ b/mojoUtilities/notes/templates/notes/base.html
@@ -13,7 +13,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">mojoUtilities - Notes</a>
+        <a class="navbar-brand" href="{% url 'notes:dashboard' user_name %}">mojoUtilities - Notes</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#">User : {{ user_name }}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'notes:index' %}">Logout</a>
+              <a class="nav-link" href="{% url 'notes:logout' user_name %}">Logout</a>
             </li>
           </ul>
         </div>
