--- a/mojoUtilities/notes/templates/notes/user_dashboard.html
+++ b/mojoUtilities/notes/templates/notes/user_dashboard.html
@@ -19,7 +19,7 @@
 	{% endif %}
 	<hr>
 
-	<a href="{% url 'notes:add_new_note' user_name %}"> Add a note </a>
+	<a href="{% url 'notes:add_note' user_name %}"> Add a note </a>
 
 	<br><br>
 	<h3>List of notes </h3>
