Google signin Try1

--- a/mojoUtilities/notes/templates/notes/base.html
+++ b/mojoUtilities/notes/templates/notes/base.html
@@ -30,6 +30,17 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'notes:user_profile' user_name %}">User : {{ user_name }}</a>
             </li>
+            <li>
+              <a href="#" onclick="signOut();">Sign out</a>
+                <script>
+                  function signOut() {
+                    var auth2 = gapi.auth2.getAuthInstance();
+                    auth2.signOut().then(function () {
+                      console.log('User signed out.');
+                    });
+                  }
+                </script>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'notes:logout' user_name %}">Logout</a>
             </li>
