--- a/mojoUtilities/notes/templates/notes/signup.html
+++ b/mojoUtilities/notes/templates/notes/signup.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Signup</title>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<meta name="google-signin-client_id" content="686853997565-1u9nkjfd057sn9c96dldmdc5udomdk06.apps.googleusercontent.com">
 </head>
 <body>
 	<h2>Welcome to Notes Entry</h2>
@@ -17,7 +19,24 @@
 	<hr>
 
 	<br>
+	<div class="g-signin2" data-onsuccess="onSignIn"></div>
+	<script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
 
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      }
+    </script>
+	<br>
 	<form action="{% url 'notes:new_signup' %}" method="post">
 		{% csrf_token %}
 		Username : <input type="text" name="user_name" required>
